# sota_retico

./: .gitignore  install-dependencies.py  pyproject.toml  sotaaudio.py  test.py
examples/: test.py
sota_retico/: __init__.py  _version.py  sota_audio.py
